--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,17 @@
 <body>
     
 <header>
+    <section id="Home">
 <div class="navbar">
     <h2 class="logo">My Portfolio</h2>
     <ul>
         <li><a href="#Home">Home</a></li>
+        <li><a href="#About">About</a></li>
         <li><a href="#My Skills">Skills</a></li>
         <li><a href="#Projects">Projects</a></li>
         <li><a href="#Contact">Contact</a></li>
     </ul>
+    </section>
     </header>
 
     <div class="main">
@@ -27,7 +30,8 @@
         <p class="subtitle">I Desgin and Code Beautifully Simple Things And I Love What I Am Doing!</p>
     </div>
 </div>
-
+    <section id="About">
+ 
     <h5 class="seprator">Who I Am</h5>
 
     <div class="about">
@@ -40,7 +44,8 @@
 
         </div>
     </div>
-
+    </section>
+    <section id="My Skills">
     <h5 class="seprator">My Skills</h5>
 
     <div class="skills">
@@ -93,7 +98,8 @@
             </div>
         </div>
     </div>
-
+    </section>
+    <section id="Projects">
     <h5 class="seprator">MY Projects</h5>
 
     <div class="content">
@@ -101,49 +107,45 @@
             <div class="item">
                 <img src="assets/item-1.jpg">
                 <div class="details">
-                    <h3>Capture Screenshots</h3>
+                    <h3>Designing Login Form</h3>
                     <div class="item-info">
                         <div class="year-badge">2025</div>
-                        <h4>JavaScript</h4>
+                        <h4>Html/CSS</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Designed a clean and responsive login form with username/email and password fields, focusing on simplicity and user experience. Implemented basic validation, interactive feedback, and a modern UI.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/item-2.jpg">
                 <div class="details">
-                    <h3>Designing Login Form</h3>
+                    <h3>A Simple Working Calculator</h3>
                     <div class="item-info">
                         <div class="year-badge">2025</div>
-                        <h4>Login Design</h4>
+                        <h4>Python</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Developed a simple and functional calculator capable of performing basic arithmetic operations like addition, subtraction, multiplication, and division. The project focuses on clean UI, responsive layout, and accurate real-time calculations, strengthening my understanding of logic implementation and user interaction.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/item-3.jpg">
                 <div class="details">
-                    <h3>Music Platform UI</h3>
+                    <h3>Designing Loading Screen</h3>
                     <div class="item-info">
                         <div class="year-badge">2025</div>
-                        <h4>UI Design</h4>
+                        <h4>Html/CSS</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Designed a visually appealing and functional loading screen with animated elements and progress indicators, enhancing user experience during page transitions and data loading.</p>
                 </div>
             </div>
             <div class="item">
                 <img src="assets/item-4.jpg">
                 <div class="details">
-                    <h3>JavaScript Charts</h3>
+                    <h3>Amazon Product Page</h3>
                     <div class="item-info">
                         <div class="year-badge">2025</div>
                         <h4>JavaScript</h4>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos ratione beatae voluptas
-                        aliquam illo maxime.</p>
+                    <p>Designed a responsive and interactive Amazon product page with dynamic content loading, image galleries, and user reviews, simulating a real e-commerce experience.</p>
                 </div>
             </div>
             <div class="item">
@@ -152,12 +154,43 @@
                     <h3>Coming Soon 🚀</h3>
                     <div class="item-info">
                         <div class="year-badge">2025</div>
-                        <h4>JavaScript</h4>
+                        <h4>Comming Soon</h4>
                     </div>
                     <p>More exciting projects are on the way.</p>
                 </div>
             </div>
         </div>
     </div>
+    </section>
+
+    <footer>
+        <section id="Contact">
+        <div class="cols">
+            <div class="about-cols">
+                <h3>Krish Tyagi</h3>
+                <p>Fullstack Developer</p>
+            </div>
+            <div class="links-cols">
+                <h4>Usefull Links</h4>
+                <a href="#Home">Home</a>
+                <a href="#About">About</a>
+                <a href="#My Skills">Skills</a>
+                <a href="#Projects">Projects</a>
+                <a href="#Contact">Contact</a>
+            </div>
+
+            <div class="social-cols">
+                <h4>Social Media</h4>
+                <a href="https://www.instagram.com/krish_tyagi_jii/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
+                <a href="https://www.linkedin.com/in/krish-tyagi-084998378" target="_blank"><i class="fa-brands fa-square-linkedin"></i>LinkedIn</a>
+                <a href="#Home" target="_blank"><i class="fa-brands fa-facebook"></i>Facebook</a>
+                <a href="https://github.com/kriishtyagee-create" target="_blank"><i class="fa-brands fa-github"></i>GitHub</a>
+            </div>
+        </div>
+        <div class="bottom-bar">
+            <p>© 2025 Krish Tyagi. All rights reserved.</p>
+        </div>
+        </section>
+    </footer>
 </body>
 </html>
